fixing spacing issues

--- a/side.css
+++ b/side.css
@@ -37,7 +37,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 25% 75%;
     position: relative;
     overflow: hidden;
 }
@@ -49,7 +49,6 @@ header {
 nav {
     z-index: 1;
     padding: 1rem;
-    font-size: 0.80rem;
 }
 
 footer {
@@ -144,7 +143,7 @@ section {
 .logo-header {
     font-weight: 400;
     font-size: 1.12rem;
-    padding-block: 3rem 0rem;
+    padding-block: 1rem 0rem;
     padding-inline: 1rem;
 }
 .copyright {
